lib/ffi/ffi_webgpu.dart


  WGpuComputePassEncoder wgpu_command_encoder_begin_compute_pass(
    WGpuCommandEncoder commandEncoder,
    ffi.Pointer<WGpuComputePassDescriptor> computePassDesc,
  ) {
    return _wgpu_command_encoder_begin_compute_pass(
      commandEncoder,
      computePassDesc,
    );
  }

  late final _wgpu_command_encoder_begin_compute_passPtr = _lookup<
          ffi.NativeFunction<
              WGpuComputePassEncoder Function(
                  WGpuCommandEncoder, ffi.Pointer<WGpuComputePassDescriptor>)>>(
      'wgpu_command_encoder_begin_compute_pass');
  late final _wgpu_command_encoder_begin_compute_pass =
      _wgpu_command_encoder_begin_compute_passPtr.asFunction<
          WGpuComputePassEncoder Function(
              WGpuCommandEncoder, ffi.Pointer<WGpuComputePassDescriptor>)>();

  void wgpu_command_encoder_copy_buffer_to_buffer(
    WGpuCommandEncoder commandEncoder,
    WGpuBuffer source,
    int sourceOffset,
    WGpuBuffer destination,
    int destinationOffset,
    int size,
  ) {
    return _wgpu_command_encoder_copy_buffer_to_buffer(
      commandEncoder,
      source,
      sourceOffset,
      destination,
      destinationOffset,
      size,
    );
  }

  late final _wgpu_command_encoder_copy_buffer_to_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCommandEncoder,
              WGpuBuffer,
              double_int53_t,
              WGpuBuffer,
              double_int53_t,
              double_int53_t)>>('wgpu_command_encoder_copy_buffer_to_buffer');
  late final _wgpu_command_encoder_copy_buffer_to_buffer =
      _wgpu_command_encoder_copy_buffer_to_bufferPtr.asFunction<
          void Function(
              WGpuCommandEncoder, WGpuBuffer, int, WGpuBuffer, int, int)>();

  void wgpu_command_encoder_copy_buffer_to_texture(
    WGpuCommandEncoder commandEncoder,
    ffi.Pointer<WGpuImageCopyBuffer> source,
    ffi.Pointer<WGpuImageCopyTexture> destination,
    int copyWidth,
    int copyHeight,
    int copyDepthOrArrayLayers,
  ) {
    return _wgpu_command_encoder_copy_buffer_to_texture(
      commandEncoder,
      source,
      destination,
      copyWidth,
      copyHeight,
      copyDepthOrArrayLayers,
    );
  }

  late final _wgpu_command_encoder_copy_buffer_to_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCommandEncoder,
              ffi.Pointer<WGpuImageCopyBuffer>,
              ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_command_encoder_copy_buffer_to_texture');
  late final _wgpu_command_encoder_copy_buffer_to_texture =
      _wgpu_command_encoder_copy_buffer_to_texturePtr.asFunction<
          void Function(WGpuCommandEncoder, ffi.Pointer<WGpuImageCopyBuffer>,
              ffi.Pointer<WGpuImageCopyTexture>, int, int, int)>();

  void wgpu_command_encoder_copy_texture_to_buffer(
    WGpuCommandEncoder commandEncoder,
    ffi.Pointer<WGpuImageCopyTexture> source,
    ffi.Pointer<WGpuImageCopyBuffer> destination,
    int copyWidth,
    int copyHeight,
    int copyDepthOrArrayLayers,
  ) {
    return _wgpu_command_encoder_copy_texture_to_buffer(
      commandEncoder,
      source,
      destination,
      copyWidth,
      copyHeight,
      copyDepthOrArrayLayers,
    );
  }

  late final _wgpu_command_encoder_copy_texture_to_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCommandEncoder,
              ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<WGpuImageCopyBuffer>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_command_encoder_copy_texture_to_buffer');
  late final _wgpu_command_encoder_copy_texture_to_buffer =
      _wgpu_command_encoder_copy_texture_to_bufferPtr.asFunction<
          void Function(WGpuCommandEncoder, ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<WGpuImageCopyBuffer>, int, int, int)>();

  void wgpu_command_encoder_copy_texture_to_texture(
    WGpuCommandEncoder commandEncoder,
    ffi.Pointer<WGpuImageCopyTexture> source,
    ffi.Pointer<WGpuImageCopyTexture> destination,
    int copyWidth,
    int copyHeight,
    int copyDepthOrArrayLayers,
  ) {
    return _wgpu_command_encoder_copy_texture_to_texture(
      commandEncoder,
      source,
      destination,
      copyWidth,
      copyHeight,
      copyDepthOrArrayLayers,
    );
  }

  late final _wgpu_command_encoder_copy_texture_to_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCommandEncoder,
              ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_command_encoder_copy_texture_to_texture');
  late final _wgpu_command_encoder_copy_texture_to_texture =
      _wgpu_command_encoder_copy_texture_to_texturePtr.asFunction<
          void Function(WGpuCommandEncoder, ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<WGpuImageCopyTexture>, int, int, int)>();

  void wgpu_command_encoder_clear_buffer(
    WGpuCommandEncoder commandEncoder,
    WGpuBuffer buffer,
    int offset,
    int size,
  ) {
    return _wgpu_command_encoder_clear_buffer(
      commandEncoder,
      buffer,
      offset,
      size,
    );
  }

  late final _wgpu_command_encoder_clear_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuCommandEncoder, WGpuBuffer, double_int53_t,
              double_int53_t)>>('wgpu_command_encoder_clear_buffer');
  late final _wgpu_command_encoder_clear_buffer =
      _wgpu_command_encoder_clear_bufferPtr.asFunction<
          void Function(WGpuCommandEncoder, WGpuBuffer, int, int)>();

  void wgpu_command_encoder_resolve_query_set(
    WGpuCommandEncoder commandEncoder,
    WGpuQuerySet querySet,
    int firstQuery,
    int queryCount,
    WGpuBuffer destination,
    int destinationOffset,
  ) {
    return _wgpu_command_encoder_resolve_query_set(
      commandEncoder,
      querySet,
      firstQuery,
      queryCount,
      destination,
      destinationOffset,
    );
  }

  late final _wgpu_command_encoder_resolve_query_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCommandEncoder,
              WGpuQuerySet,
              ffi.Uint32,
              ffi.Uint32,
              WGpuBuffer,
              double_int53_t)>>('wgpu_command_encoder_resolve_query_set');
  late final _wgpu_command_encoder_resolve_query_set =
      _wgpu_command_encoder_resolve_query_setPtr.asFunction<
          void Function(
              WGpuCommandEncoder, WGpuQuerySet, int, int, WGpuBuffer, int)>();

  WGpuObjectBase wgpu_encoder_finish(
    WGpuObjectBase commandOrRenderBundleEncoder,
  ) {
    return _wgpu_encoder_finish(
      commandOrRenderBundleEncoder,
    );
  }

  late final _wgpu_encoder_finishPtr =
      _lookup<ffi.NativeFunction<WGpuObjectBase Function(WGpuObjectBase)>>(
          'wgpu_encoder_finish');
  late final _wgpu_encoder_finish = _wgpu_encoder_finishPtr
      .asFunction<WGpuObjectBase Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuCommandEncoderDescriptor>
      _WGPU_COMMAND_ENCODER_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuCommandEncoderDescriptor>(
          'WGPU_COMMAND_ENCODER_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuCommandEncoderDescriptor
      get WGPU_COMMAND_ENCODER_DESCRIPTOR_DEFAULT_INITIALIZER =>
          _WGPU_COMMAND_ENCODER_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  late final ffi.Pointer<WGpuImageCopyBuffer>
      _WGPU_IMAGE_COPY_BUFFER_DEFAULT_INITIALIZER =
      _lookup<WGpuImageCopyBuffer>(
          'WGPU_IMAGE_COPY_BUFFER_DEFAULT_INITIALIZER');

  WGpuImageCopyBuffer get WGPU_IMAGE_COPY_BUFFER_DEFAULT_INITIALIZER =>
      _WGPU_IMAGE_COPY_BUFFER_DEFAULT_INITIALIZER.ref;

  int wgpu_is_binding_commands_mixin(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_binding_commands_mixin(
      object,
    );
  }

  late final _wgpu_is_binding_commands_mixinPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_binding_commands_mixin');
  late final _wgpu_is_binding_commands_mixin =
      _wgpu_is_binding_commands_mixinPtr
          .asFunction<int Function(WGpuObjectBase)>();

  void wgpu_encoder_set_bind_group(
    WGpuBindingCommandsMixin encoder,
    int index,
    WGpuBindGroup bindGroup,
    ffi.Pointer<ffi.Uint32> dynamicOffsets,
    int numDynamicOffsets,
  ) {
    return _wgpu_encoder_set_bind_group(
      encoder,
      index,
      bindGroup,
      dynamicOffsets,
      numDynamicOffsets,
    );
  }

  late final _wgpu_encoder_set_bind_groupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuBindingCommandsMixin,
              ffi.Uint32,
              WGpuBindGroup,
              ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('wgpu_encoder_set_bind_group');
  late final _wgpu_encoder_set_bind_group =
      _wgpu_encoder_set_bind_groupPtr.asFunction<
          void Function(WGpuBindingCommandsMixin, int, WGpuBindGroup,
              ffi.Pointer<ffi.Uint32>, int)>();

  void wgpu_encoder_set_pipeline(
    WGpuBindingCommandsMixin encoder,
    WGpuObjectBase pipeline,
  ) {
    return _wgpu_encoder_set_pipeline(
      encoder,
      pipeline,
    );
  }

  late final _wgpu_encoder_set_pipelinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuBindingCommandsMixin,
              WGpuObjectBase)>>('wgpu_encoder_set_pipeline');
  late final _wgpu_encoder_set_pipeline = _wgpu_encoder_set_pipelinePtr
      .asFunction<void Function(WGpuBindingCommandsMixin, WGpuObjectBase)>();

  void wgpu_encoder_end(
    WGpuBindingCommandsMixin encoder,
  ) {
    return _wgpu_encoder_end(
      encoder,
    );
  }

  late final _wgpu_encoder_endPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuBindingCommandsMixin)>>(
          'wgpu_encoder_end');
  late final _wgpu_encoder_end = _wgpu_encoder_endPtr
      .asFunction<void Function(WGpuBindingCommandsMixin)>();

  int wgpu_is_compute_pass_encoder(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_compute_pass_encoder(
      object,
    );
  }

  late final _wgpu_is_compute_pass_encoderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_compute_pass_encoder');
  late final _wgpu_is_compute_pass_encoder = _wgpu_is_compute_pass_encoderPtr
      .asFunction<int Function(WGpuObjectBase)>();

  void wgpu_compute_pass_encoder_dispatch_workgroups(
    WGpuComputePassEncoder encoder,
    int workgroupCountX,
    int workgroupCountY,
    int workgroupCountZ,
  ) {
    return _wgpu_compute_pass_encoder_dispatch_workgroups(
      encoder,
      workgroupCountX,
      workgroupCountY,
      workgroupCountZ,
    );
  }

  late final _wgpu_compute_pass_encoder_dispatch_workgroupsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuComputePassEncoder, ffi.Uint32, ffi.Uint32,
              ffi.Uint32)>>('wgpu_compute_pass_encoder_dispatch_workgroups');
  late final _wgpu_compute_pass_encoder_dispatch_workgroups =
      _wgpu_compute_pass_encoder_dispatch_workgroupsPtr
          .asFunction<void Function(WGpuComputePassEncoder, int, int, int)>();

  void wgpu_compute_pass_encoder_dispatch_workgroups_indirect(
    WGpuComputePassEncoder encoder,
    WGpuBuffer indirectBuffer,
    int indirectOffset,
  ) {
    return _wgpu_compute_pass_encoder_dispatch_workgroups_indirect(
      encoder,
      indirectBuffer,
      indirectOffset,
    );
  }
